# website-hakyll

./: LICENSE  README.md  circle.yml  circleci_deploy.sh  new_post  site.cabal  site.hs  stack.yaml  website-hakyll.cabal
.circleci/: config.yml  deploy.sh
.github/workflows/: build.yml
content/: contact.md  index.md  pubs.md  software.md
content/blog/: 2017-02-12-test-blog-entry.md  deploying_a_hakyll_site_on_circleci_2.0.md
css/: pubs.css  site.css  syntax.css
templates/: blog.html  default.html  post-list.html  post.html
tools/: README.md  write_highlight_css.hs
