name:                website-hakyll
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ajdawson/website-hakyll#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Dawson
maintainer:          andrew.dawson@physics.ox.ac.uk
copyright:           2017 Andrew Dawson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable website-hakyll
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.7.*
